--- a/talos/src/component/login/idcard.module.scss
+++ b/talos/src/component/login/idcard.module.scss
@@ -145,7 +145,7 @@ $karma-5: url('@/assets/images/UI/avt/Karma5.png');
         grid-area: usrname;
         color: #fafafa;
         font-size: 125%;
-        transform: translate(12px, 8px);
+        transform: translate(12px, 9px);
         font-family: 'UD_ShinGo DemiBold', 'HMSans', 'Noto Sans SC', 'Noto Sans Arabic', 'Noto Sans Thai', sans-serif;
         font-weight: 600;
         line-height: 1.2;
@@ -159,7 +159,7 @@ $karma-5: url('@/assets/images/UI/avt/Karma5.png');
         font-size: 95%;
         font-family: "Novecento Medium Regular", sans-serif;
         white-space: nowrap;
-        transform: translate(12px, 3px);
+        transform: translate(12px, 5px);
         letter-spacing: -1px;
     }
 
